--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.drugstoremanagement">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
+    <application  android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true"
         android:theme="@style/Theme.DrugStoreManagement">
-        <activity android:name=".ui.main.MainActivity" android:exported="true">
+        <activity
+            android:name=".ui.splashscreen.SplashScreenActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -12,11 +14,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".ui.drugstore.DrugStoreActivity"
             android:exported="true" />
         <activity
             android:name=".ui.bill.BillActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
