--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'org.chromium.net:cronet-embedded:76.3809.111'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.nex3z:flow-layout:1.3.3'
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
