--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,13 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.DrugStoreManagement">
+        <activity
+            android:name=".ui.detailbill.DetailBillActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.main.ContentActivity"
             android:exported="true"
